--- a/packages/ipfs-http-client/package.json
+++ b/packages/ipfs-http-client/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "@ipld/dag-cbor": "^6.0.5",
+    "@ipld/dag-json": "^8.0.1",
     "@ipld/dag-pb": "^2.1.3",
     "abort-controller": "^3.0.0",
     "any-signal": "^2.1.2",
@@ -76,7 +77,7 @@
   "devDependencies": {
     "aegir": "^35.1.1",
     "delay": "^5.0.0",
-    "go-ipfs": "0.9.1",
+    "go-ipfs": "0.10.0",
     "ipfsd-ctl": "^10.0.4",
     "it-all": "^1.0.4",
     "it-first": "^1.0.4",
